--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,16 @@
 
   <groupId>org.example</groupId>
   <artifactId>tests</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.1</version>
   <packaging>jar</packaging>
-
   <name>tests</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.release>17</maven.compiler.release>
   </properties>
 
   <dependencies>
